fixed timer alignment

--- a/style.css
+++ b/style.css
@@ -157,8 +157,9 @@ body {
 }
 .timer {
   display: flex;
+  position: absolute;
   width: inherit;
-  margin-left: -10%;
+  margin-bottom: 5%;
 }
 .seconds {
   margin-left: 6px;
@@ -167,7 +168,7 @@ body {
   footer {
     width: 100%;
     text-align: center;
-    transform: translate(-5%, 150%);
+    transform: translate(0%, 150%);
   }
   body {
     align-items: center;
@@ -254,7 +255,7 @@ body {
     width: 100%;
   }
   .timer {
-    margin-top: -5%;
+    margin-top: -7%;
   }
 }
 .hidden {
